--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <p>Hello World!</p>
+  <div class="container">
+    <div class="center-block">
+      <div class="row">
+        <div class="span12">
+            <div id="chartContainer" style="height: 60%; width: 100%;">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <script type="text/javascript">
+  window.onload = function () {
+  var chart = new CanvasJS.Chart("chartContainer",
+  {
+
+    title:{
+    text: "Earthquakes - per month"
+    },
+     data: [
+    {
+      type: "line",
+
+      dataPoints: [
+      { x: new Date(2012, 00, 1), y: 450 },
+      { x: new Date(2012, 01, 1), y: 414 },
+      { x: new Date(2012, 02, 1), y: 520 },
+      { x: new Date(2012, 03, 1), y: 460 },
+      { x: new Date(2012, 04, 1), y: 450 },
+      { x: new Date(2012, 05, 1), y: 500 },
+      { x: new Date(2012, 06, 1), y: 480 },
+      { x: new Date(2012, 07, 1), y: 480 },
+      { x: new Date(2012, 08, 1), y: 410 },
+      { x: new Date(2012, 09, 1), y: 500 },
+      { x: new Date(2012, 10, 1), y: 480 },
+      { x: new Date(2012, 11, 1), y: 510 }
+      ]
+    }
+    ]
+  });
+
+  chart.render();
+  }
+  </script>
   <script type="text/javascript" src="/static/js/canvasjs.min.js"></script>
 </body>
 </html>
