--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,8 +5,30 @@
   <script src="/static/js/bootstrap.min.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+  #bg {
+    position: fixed;
+    top: -50%;
+    left: -50%;
+    width: 160%;
+    height: 120%;
+  }
+  #bg img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    min-width: 50%;
+    min-height: 50%;
+  }
+  </style>
 </head>
 <body>
+  <div id="bg">
+    <img src="/static/res/158H.jpg" alt="">
+  </div>
   <div class="container">
     <div class="center-block">
       <div class="row">
