--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,13 @@
   <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
   <script src="/static/js/bootstrap.min.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link rel="shortcut icon" href="../favicon.ico">
+  <link rel="stylesheet" type="text/css" href="/static/css/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="/static/css/demo.css" />
+  <link rel="stylesheet" type="text/css" href="/static/css/icons.css" />
+  <link rel="stylesheet" type="text/css" href="/static/css/style1.css" />
+  <script src="/static/js/modernizr.custom.js"></script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
   #bg {
@@ -29,11 +36,20 @@
   <div id="bg">
     <img src="/static/res/158H.jpg" alt="">
   </div>
-  <div class="container">
+  <div class="container" style="position:relative; top:-7%">
+    <header class="codrops-header">
+      <h1>Black Hat Data Portal</h1>
+      <nav class="codrops-demos">
+        <a class="current-demo" href="index.html">Accelerometer</a>
+        <a href="index2.html">Temperature</a>
+        <a href="index3.html">Humidity</a>
+        <a href="index4.html">Dust Concentration</a>
+      </nav>
+    </header>
     <div class="center-block">
       <div class="row">
         <div class="span12">
-            <div id="chartContainer" style="height: 60%; width: 100%;">
+            <div id="chartContainer" style="height: 60%; width: 90%;">
             </div>
           </div>
         </div>
@@ -46,25 +62,25 @@
   {
 
     title:{
-    text: "Earthquakes - per month"
+    text: "Accelerometer Data"
     },
      data: [
     {
       type: "line",
 
       dataPoints: [
-      { x: new Date(2012, 00, 1), y: 450 },
-      { x: new Date(2012, 01, 1), y: 414 },
-      { x: new Date(2012, 02, 1), y: 520 },
-      { x: new Date(2012, 03, 1), y: 460 },
-      { x: new Date(2012, 04, 1), y: 450 },
-      { x: new Date(2012, 05, 1), y: 500 },
-      { x: new Date(2012, 06, 1), y: 480 },
-      { x: new Date(2012, 07, 1), y: 480 },
-      { x: new Date(2012, 08, 1), y: 410 },
-      { x: new Date(2012, 09, 1), y: 500 },
-      { x: new Date(2012, 10, 1), y: 480 },
-      { x: new Date(2012, 11, 1), y: 510 }
+      { y: 450 },
+      { y: 414 },
+      { y: 520 },
+      { y: 460 },
+      { y: 450 },
+      { y: 500 },
+      { y: 480 },
+      { y: 480 },
+      { y: 410 },
+      { y: 500 },
+      { y: 480 },
+      { y: 510 }
       ]
     }
     ]
@@ -74,5 +90,7 @@
   }
   </script>
   <script type="text/javascript" src="/static/js/canvasjs.min.js"></script>
+  <script src="/static/js/classie.js"></script>
+  <script src="/static/js/borderMenu.js"></script>
 </body>
 </html>
