Index refreshed every 5 seconds

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/icons.css" />
   <link rel="stylesheet" type="text/css" href="/static/css/style1.css" />
   <script src="/static/js/modernizr.custom.js"></script>
-
+  <META HTTP-EQUIV="Refresh" CONTENT=5>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
   #bg {
