--- a/app/templates/humidity.html
+++ b/app/templates/humidity.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/style1.css" />
   <script src="/static/js/modernizr.custom.js"></script>
   <script type="text/javascript" src="/static/js/jquery-1.11.2.min.js"></script>
-  <!--<META HTTP-EQUIV="Refresh" CONTENT=5> -->
+<!--  <META HTTP-EQUIV="Refresh" CONTENT=5> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
   #bg {
@@ -44,7 +44,7 @@
         <a href="{{url_for('index')}}">Accelerometer</a>
         <a href="{{url_for('temp')}}">Temperature</a>
         <a class="current-demo" href="{{url_for('humidity')}}">Humidity</a>
-        <a href="#">Dust Concentration</a>
+        <a href="{{url_for('summary')}}">Summary</a>
       </nav>
     </header>
     <div class="center-block">
@@ -82,7 +82,9 @@
     animationEnabled: true,
      data: [
     {
-      type: "line",
+      type: "area",
+      fillOpacity: .3,
+      lineThickness: 2,
 
       dataPoints: data_points /*[
       { y: 450 },
