--- a/app/templates/humidity.html
+++ b/app/templates/humidity.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/style1.css" />
   <script src="/static/js/modernizr.custom.js"></script>
   <script type="text/javascript" src="/static/js/jquery-1.11.2.min.js"></script>
-<!--  <META HTTP-EQUIV="Refresh" CONTENT=5> -->
+  <META HTTP-EQUIV="Refresh" CONTENT=5>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
   #bg {
@@ -59,52 +59,55 @@
 
   <script type="text/javascript">
 
-  var data_points = []
-
-  $.getJSON("/static/json/humidity.json", function(data) {
-    $.each(data, function(key, val) {
-      var bar =
-      {
-        y: val
-      }
-      data_points.push(bar);
-    });
-  });
 
   window.onload = function () {
-  var chart = new CanvasJS.Chart("chartContainer",
-  {
+    var data_points = []
 
-    title:{
-    text: "Humidity Data"
-    },
+    $.getJSON("/static/json/humidity.json", function(data) {
+      $.each(data, function(key, val) {
+        var bar =
+        {
+          y: val
+        }
+        data_points.push(bar);
+      });
+      var chart = new CanvasJS.Chart("chartContainer",
+      {
 
-    animationEnabled: true,
-     data: [
-    {
-      type: "area",
-      fillOpacity: .3,
-      lineThickness: 2,
+        title:{
+        text: "Humidity Data"
+        },
 
-      dataPoints: data_points /*[
-      { y: 450 },
-      { y: 414 },
-      { y: 520 },
-      { y: 460 },
-      { y: 450 },
-      { y: 500 },
-      { y: 480 },
-      { y: 480 },
-      { y: 410 },
-      { y: 500 },
-      { y: 480 },
-      { y: 510 }
-    ] */
-    }
-    ]
-  });
+        animationEnabled: true,
+         data: [
+        {
+          type: "area",
+          fillOpacity: .3,
+          lineThickness: 2,
 
-  chart.render();
+          dataPoints: data_points /*[
+          { y: 450 },
+          { y: 414 },
+          { y: 520 },
+          { y: 460 },
+          { y: 450 },
+          { y: 500 },
+          { y: 480 },
+          { y: 480 },
+          { y: 410 },
+          { y: 500 },
+          { y: 480 },
+          { y: 510 }
+        ] */
+        }
+        ]
+      });
+
+      chart.render();
+
+    });
+
+
   }
   </script>
   <script type="text/javascript" src="/static/js/canvasjs.min.js"></script>
