Final edits for hackathon

--- a/app/templates/humidity.html
+++ b/app/templates/humidity.html
@@ -75,7 +75,7 @@
       {
 
         title:{
-        text: "Humidity Data"
+        text: "Humidity Data for Employee A"
         },
 
         animationEnabled: true,
