--- a/app/templates/summary.html
+++ b/app/templates/summary.html
@@ -85,7 +85,7 @@
             <table class="table table-hover table-condensed">
               <thead>
                 <th style="font-size: 1.5em;">Metric</th>
-                <th style="font-size: 1.5em;">Safety Score</th>
+                <th style="font-size: 1.5em;">Productivity/Safety Score</th>
               </thead>
               <tbody>
                 {% for metric in scores %}
