--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/style1.css" />
   <script src="/static/js/modernizr.custom.js"></script>
   <script type="text/javascript" src="/static/js/jquery-1.11.2.min.js"></script>
-  <META HTTP-EQUIV="Refresh" CONTENT=5>
+  <!--<META HTTP-EQUIV="Refresh" CONTENT=5> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
   #bg {
@@ -37,11 +37,11 @@
   <div id="bg">
     <img src="/static/res/158H.jpg" alt="">
   </div>
-  <div class="container" style="position:relative; top:-7%">
+  <div class="container" style="position:relative; top:25%;">
     <header class="codrops-header">
-      <h1>Black Hat Data Portal</h1>
+      <h1 style="font-size: 4.5em; font-weight: 600;">Black Hat<span>courtesy of YNC_Hacks<span></h1>
       <nav class="codrops-demos">
-        <a class="current-demo" href="{{url_for('index')}}">Accelerometer</a>
+        <a href="{{url_for('index')}}">Accelerometer</a>
         <a href="{{url_for('temp')}}">Temperature</a>
         <a href="{{url_for('humidity')}}">Humidity</a>
         <a href="{{url_for('summary')}}">Summary</a>
@@ -50,65 +50,11 @@
     <div class="center-block">
       <div class="row">
         <div class="span12">
-            <div id="chartContainer" style="height: 60%; width: 90%;">
-            </div>
           </div>
         </div>
       </div>
     </div>
 
-  <script type="text/javascript">
-
-
-  window.onload = function () {
-    var data_points = []
-
-    $.getJSON("/static/json/accelerometer.json", function(data) {
-      $.each(data, function(key, val) {
-        var bar =
-        {
-          y: val
-        }
-        data_points.push(bar);
-      });
-      var chart = new CanvasJS.Chart("chartContainer",
-      {
-
-        title:{
-        text: "Accelerometer Data for Employee A"
-        },
-
-        animationEnabled: true,
-         data: [
-        {
-          type: "area",
-          fillOpacity: .3,
-          lineThickness: 2,
-
-          dataPoints: data_points /*[
-          { y: 450 },
-          { y: 414 },
-          { y: 520 },
-          { y: 460 },
-          { y: 450 },
-          { y: 500 },
-          { y: 480 },
-          { y: 480 },
-          { y: 410 },
-          { y: 500 },
-          { y: 480 },
-          { y: 510 }
-        ] */
-        }
-        ]
-      });
-
-      chart.render();
-
-    });
-
-  }
-  </script>
   <script type="text/javascript" src="/static/js/canvasjs.min.js"></script>
   <script src="/static/js/classie.js"></script>
   <script src="/static/js/borderMenu.js"></script>
