--- a/app/templates/temperature.html
+++ b/app/templates/temperature.html
@@ -74,7 +74,7 @@
       {
 
         title:{
-        text: "Temperature Data"
+        text: "Temperature Data for Employee A"
         },
 
         animationEnabled: true,
